@@ -6,13 +6,18 @@ module TasksHelper
   def task_filter_checbox(view, filter, count)
     name = "filter_by_task_#{view}"
     checked = (session[name] ? session[name].split(",").include?(filter.to_s) : count > 0)
-    check_box_tag("filters[]", filter, checked, :onclick => remote_function(:url => { :action => :filter, :view => view }, :with => %Q/"filters=" + $$("input[name='filters[]']").findAll(function (el) { return el.checked }).pluck("value")/))
+    check_box_tag("filters[]", filter, checked, :onclick => remote_function(:url => { :action => :filter, :view => view }, :with => "{filter: this.value, checked:this.checked}" ))
   end
 
-  # Returns true if the view has all filters unchecked resulting in empty task list.
   #----------------------------------------------------------------------------
-  def all_filtered_out?(view)
-    session["filter_by_task_#{view}"].blank?
+  def filtered_out?(view, filter = nil)
+    name = "filter_by_task_#{view}"
+    if filter
+      filters = (session[name].nil? ? [] : session[name].split(","))
+      !filters.include?(filter.to_s)
+    else
+      session[name].blank?
+    end
   end
 
   #----------------------------------------------------------------------------
