@@ -2,8 +2,10 @@
 
 .title Completed Tasks
 .log#log
-  - if !@tasks.values.flatten.empty? || all_filtered_out?(:completed)
+  - if !@tasks.values.flatten.empty? || filtered_out?(@view)
     - Setting.task_completed.each do |value, key|
-      %div{ :id => "list_#{key}" }= render :partial => "list", :locals => { :key => key, :value => value }
+      %div{ hidden_if(filtered_out?(@view, key)), :id => "list_#{key}" }
+        %h3= value
+        .bucket{:id => key}= render :partial => @view, :collection => @tasks[key] || [], :locals => { :bucket => key }
   - else
     %div You don't have any completed tasks yet.
